--- a/Redemption_page_index.html
+++ b/Redemption_page_index.html
@@ -30,7 +30,7 @@
       	</div>
   	</div>
   </nav>
-<h3>Redeeming of Coupons</h3>
+<h3>Redeeming of Coupons</h3><br/>
 <legend>Please Enter ID Number for Coupon</legend>
 <div class="col-sm-4">
 	<div class="input-group ">
@@ -92,7 +92,6 @@
             <th>End Date</th>
             <th>Number of Issued Coupons</th>
             <th>Trigger Words</th>
-            <th class="text-right">Action</th>
         </tr>
     </thead>
     <tbody>
@@ -107,15 +106,10 @@
             <td></td>
             <td></td>
             <td>1: <br/>2: <br/>3: <br/></td>
-            <td>
-                <button title="Submit" class=" btn btn-success btn-round btn-sm">
-                    <i class="material-icons">note_add</i> Submit
-                </button>
-            </td>
-        </tr>
+      </tr>
     </tbody>
     </table>
-</div>
+</div><br/>
   <footer>
   &copy; 2017 KeyKash Inc.
   </footer>
