updated & made Gold level login page
updated page links and made gold level login page

--- a/Redemption_page_index.html
+++ b/Redemption_page_index.html
@@ -25,7 +25,7 @@
       		<ul class="nav navbar-nav">
                   <li><a href="add_coupon_ page_index.html">Add Coupons</a></li>
                   <li><a href=""class="current">Redeem Coupons</a></li>
-                  <li><a href="">Gold Level Members</a></li>
+                  <li><a href="Gold_Level_Members_page_Index.html">Gold Level Members</a></li>
       		</ul>
       	</div>
   	</div>
