--- a/add_coupon_ page_index.html
+++ b/add_coupon_ page_index.html
@@ -24,7 +24,7 @@
       		<ul class="nav navbar-nav">
                   <li><a href=""class="current">Add Coupons</a></li>
                   <li><a href="Redemption_page_index.html">Redeem Coupons</a></li>
-                  <li><a href="">Gold Level Members</a></li>
+                  <li><a href="Gold_Level_Members_page_Index.html">Gold Level Members</a></li>
       		</ul>
       	</div>
   	</div>
